removed animation while collapsing and a small fix in css for nova mission portal

--- a/GUI2/themes/default/css/appstyle.css
+++ b/GUI2/themes/default/css/appstyle.css
@@ -2836,6 +2836,7 @@ background-image: none;
     color:#222222;
     text-transform: uppercase;
     padding-left: 5px;
+    cursor: pointer;
 }
 
 .result li.reportitem{
